fix input alignment from new input styles changes

--- a/css/inner/add-projects.less
+++ b/css/inner/add-projects.less
@@ -21,7 +21,7 @@
     height: 1.2em;
     line-height: 1.2em;
     margin-bottom: 0;
-    padding-bottom: 2px;
+    padding: 0 .5em;
   }
 
   .sidebar {
